--- a/resume.html
+++ b/resume.html
@@ -24,9 +24,9 @@
     <nav class="nav">
         <h1><a href="index.html"><b>Yeeun Chung</b></a></h1>
         <ul>
-            <li><a href="about.html"><b>about me</b></a></li>
-            <li><a href="resume.html"><b>resume</b></a></li>
-            <li><a href="https://corinhere.tistory.com"><b>blog</b></a></li>
+            <li><a href="about.html"><b>About me</b></a></li>
+            <li><a href="resume.html"><b>Resume</b></a></li>
+            <li><a href="https://corinhere.tistory.com"><b>Blog</b></a></li>
         </ul>
     </nav>
     <iframe class="resume-iframe"
