사진제목수정

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="projects">
     <ul>
         <li><a href="#">
-            <a href="DGE/index.html" target="_blank"><img src="images/DGEcapture.png">
+            <a href="DGE/index.html" target="_blank"><img src="images/dgecapture.png">
             
         </a></li>
         <li><a href="#">
