파일명수정

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         </ul>
     </nav>
         <div class="introduce">
-            <img class="introduce-image" src="images/my.jpg" />
+            <img class="introduce-image" src="images/my.JPG" />
             <div class="introduce-desc">
                 <p>
                     I'm Yeeun chung, just call me yeni.
