작업중페이지업로드

--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
   
 <div class="projects">
     <ul>
-        <li><a href="#">
+        <li>
             <a href="DGE/index.html" target="_blank"><img src="images/dgecapture.png">
-            
-        </a></li>
-        <li><a href="#">
-            <img src="images/wolganmatzipcapture.jpeg">
+            </a></li>
+        <li><a href="matzip/index.html" target="_blank"><img src="images/wolganmatzipcapture.jpeg">
             
         </a></li>
     </ul>
